# core

./: .gitignore  README.md  apply.sh  database.sh  db-fordward.sh  db-schemas.sh  db.sh  flake.nix  flink.sh  kafka.sh  minikube.sh  package-lock.json  production.sh  pub-global.sh  secrets.sh  setup.sh  skaffold.sh  skaffold.yaml  update-global.sh  vitess.sh
.github/workflows/: frontend-home.yml  frontend-main.yml  interface-main.yml  kubernetes.yml  micro-notifications.yml  micro-store-publisher.yml  micro-store.yml  publiser-service-store.yml  service-store.yml  ui-main.yml
A/k8s/: blockchain-deploy.yaml  cock-client.yaml  cock-values.yaml  data-capture.yaml  database-capture.yaml  database-cluster.yaml  database-deploy.yaml  debezium-depl.yaml  debezium-setup.yaml  frontend-home.txt  frontend-main.yml  frontend-seller-deploy.yaml  interface-main.yaml  kafka-cluster.txt  kafka-cluster.yaml  kafka-connector.txt  kafka-connector.yaml  kafka-operator.yaml  limiter-service-store.yaml  micro-notifications.yaml  micro-store-cache.yaml  micro-store-publisher.yaml  micro-store-rater.yaml  micro-store.yaml  publisher-service-store.yaml  redis-streaming.yaml  service-event-deploy.yaml  service-events-redis.yaml  service-gate-deploy.yaml  service-gate-stream.yaml  service-gateway-deploy.yaml  service-gateway-redis.yaml  service-gateway-stream.yaml  service-index-deploy.txt  service-index-deploy.yaml  service-location-deploy.yaml  service-media-deploy.yaml  service-mediator-deploy.yaml  service-node-deploy.txt  service-node-deploy.yaml  (+15 more)
A/k8s-dev/: docker-registry.yaml  global-config.yaml  ingress-srv.yaml
A/k8s-prod/: cert.yaml  global-config.yaml  ingress-srv.yaml  interface-main.yaml  micro-notifications.yaml  micro-store-publisher.yaml  micro-store.yaml  service-store.yaml
blockchain/: docker-compose.yaml
blockchain/plutus-example/: .gitignore  Dockerfile  cabal.project  plutus-example.cabal  run.sh  setup.sh
blockchain/service-index/: .gitignore  Dockerfile  setup.sh
blockchain/service-node/: .dockerignore  .gitignore  Dockerfile  setup.sh
data-capture/: config.sh
debezium-connector-vitess/: Dockerfile
frontend-home/: Dockerfile  nginx.conf  package-lock.json  package.json  vue.config.js
frontend-home/public/: index.html
frontend-home/src/: App.vue  main.js
frontend-main/: README.md  package-lock.json  package.json  vue.config.js
frontend-main/public/: index.html
frontend-main/src/: App.vue  main.js
frontend-seller/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend-seller/src/: App.vue  main.js
global/: index.ts  package-lock.json  package.json
global/errors/: RequestValidationError.ts
global/middlewares/: express-validator.ts  request-ip.ts
global/models/: pub.ts
global/types/: TokenPayload.ts
global/utils/: crypto.ts  token.ts
interface-main/: Dockerfile  package-lock.json  package.json
interface-main/public/: index.html
interface-main/src/: App.vue
marketplace/: aiken.toml  plutus.json
marketplace/deno/: credentials.ts  deploy.ts  empty.addr  empty.sk  index.js  index.ts  me.addr  me.sk  package-lock.json  plutus.json  plutus.ts  waiting.js  waiting.ts
marketplace/validators/: deploy.ak  marketplace.ak  tests.ak
micro-notifications/: index.js  package-lock.json  package.json  tsconfig.json
micro-notifications/src/: index.ts
micro-store/: Dockerfile  package.json
micro-store/src/: app.ts  index.ts
plugin-connector/: .gitignore  setup.sh
plugin-debezium/: Dockerfile
plutus-example/: .gitignore  README.md  cabal.project  flake.nix  plutus-example.cabal  result  txtest
plutus-example/app/: Contracts.hs  Deploy.hs  SimSlave.hs
plutus-example/docs/: txtestinfo
plutus-example/lib/: StateMachine.hs
plutus-example/pab/: run-testnet-pab.sh
plutus-example/src/: Deploy.hs  PayToWallet.hs  Slave.hs  StateMachine.hs  Utilities.hs
plutus-example/test/: Spec.hs
publisher-store/: .dockerignore  Dockerfile  package.json  tsconfig.json
publisher-store/src/: index.ts
service-empty/: package.json
service-empty/global/: index.ts
service-empty/src/: app.ts  index.ts
service-event/: package.json
service-event/src/: index.ts
service-events/: .env  package.json
service-events/src/: index.ts
service-frost/: .dockerignore  package.json
service-frost/global/: index.ts
service-frost/src/: app.ts  index.ts
service-gate/: Dockerfile  package.json
service-gate/docs/: status.json
service-gate/src/: index.ts
service-gateway/: Dockerfile  package-lock.json  package.json
service-gateway/src/: index.ts  other.ts
service-gatewayx/src/: index.ts
service-index/: .gitignore  Dockerfile  chain-index-config.json  config.json  kaka.txt  repo.sh  run.sh  setup.sh
service-location/: package.json
service-location/src/: index.ts
service-media/: Dockerfile  package.json
service-mediator/: package.json
service-node/: .dockerignore  Dockerfile  query-tip.sh  run.sh  start.sh  update.sh
service-product/: package.json
service-query/: package-lock.json  package.json  tsconfig.json
service-seller/: Dockerfile  package.json
service-sellers/: package.json
service-session/: Dockerfile  index.js  package.json
service-store/: cert.pem  package.json
service-user/: package.json
service-wallet/: .gitignore  pkh.sh  run.sh
session-x/: index.js  package-lock.json
source-tunnel/: Dockerfile  config.sh  seatunnel.streaming.conf
test/: Dockerfile
ui-main/: Dockerfile  README.md  package-lock.json  package.json
z/: vitess.sh
z/plutus-example/: .gitignore  plutus-example.cabal  shell.nix
z/plutus-example/app/: Contracts.hs  MainSlave.hs  RunSlave.hs  SimSlave.hs  Slave.hs  simulate-slave.hs
z/plutus-example/app/pab/: pab-config.yml  run-testnet-pab.sh
z/plutus-example/app/pab/testnet/: pab-config.yml
z/plutus-example/app/pab/testnet/sqlite/: pabtestnet.db
z/plutus-example/output/: locking.datum  slave.datum  slave.plutus
z/plutus-example/src/: Deploy.hs  Slave.hs
z/plutus-example/src/Utilities/: Conversions.hs  Serialise.hs
z/plutus-example/test/Spec/: Slave.hs
(+603 files in other folders)
