cabal-version:      3.0
name:               plutus-example
version:            1.2.0.0
description:
  End to end examples of creating and executing Plutus scripts.

author:             IOHK
maintainer:         operations@iohk.io
license:            Apache-2.0
build-type:         Simple
extra-source-files: README.md

flag unexpected_thunks
  description: Turn on unexpected thunks checks
  default:     False

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common-definitions
  default-language:   Haskell2010
  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

common maybe-Win32

library
  import:          common-definitions
  hs-source-dirs:     src
  exposed-modules:
    Slave
    Deploy
    Utilities
    Utilities.Conversions
    Utilities.PlutusTx
    Utilities.Serialise    
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
  --------------------
  -- Local components
  --------------------
  build-depends:   plutus-script-utils >=1.2.0


  --------------------------
  -- IOG dependencies
  --------------------------
  build-depends:
    , cardano-api              >=1.35
    , cardano-cli              >=1.35
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-network
    , plutus-ledger-api        >=1.0.0
    , plutus-tx                >=1.0.0
    , plutus-tx-plugin         >=1.0.0
    , cardano-node-emulator    >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0  
    , plutus-core        >=1.0.0   

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , bytestring
    , containers
    , serialise
    , strict-containers
    , text
    , transformers
    , transformers-except
    , base
    , freer-simple
    , hashable
    , lens
    , openapi3
    , prettyprinter
    , semigroups
    , streaming
    , template-haskell
    , time
    , base16-bytestring
    , cardano-crypto-class

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors


  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas




executable plutus-example-deploy
  main-is: RunSlave.hs
  hs-source-dirs: app
 --other-modules: Deploy.hs
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
 --------------------------
  -- IOG dependencies
  --------------------------
  build-depends:
    , cardano-api              >=1.35
    , cardano-cli              >=1.35
    , cardano-binary    
    , cardano-ledger-alonzo
    , cardano-prelude
    , hedgehog-extras
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma    
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-consensus-cardano    
    , ouroboros-network
    , plutus-ledger-api        >=1.0.0
    , plutus-tx                >=1.0.0
    , plutus-tx-plugin         >=1.0.0
    , cardano-node-emulator    >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0  
    , plutus-core              >=1.0.0   
    , plutus-example
    , plutus-contract-model    >=1.1.0    
    , plutus-contract-certification  >=1.1.0    
    , freer-extras                   >=1.1.0
    , quickcheck-contractmodel     >=0.1.4.0
    , quickcheck-dynamic           >=3.0.2    
    , plutus-script-utils >=1.2.0
    , plutus-pab
    
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0
  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , bytestring
    , base16-bytestring    
    , containers
    , serialise
    , strict-containers
    , text
    , transformers
    , transformers-except
    , freer-simple
    , hashable
    , lens
    , openapi3
    , prettyprinter
    , semigroups
    , streaming
    , template-haskell
    , base               >=4.9     && <5
    , data-default
    , foldl
    , mmorph
    , mtl
    , pretty
    , QuickCheck
    , tasty
    , tasty-golden
    , hedgehog
    , tasty-hedgehog     >=0.2.0.0
    , tasty-hunit
    , tasty-quickcheck
    , time
    , directory
    , filepath
    , unordered-containers
    , optparse-applicative-fork

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas 



test-suite plutus-example-test
  import:             common-definitions
  hs-source-dirs:     test
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  default-extensions: ImportQualifiedPost

  --------------------------
  -- IOG dependencies
  --------------------------
  build-depends:
    , cardano-api              >=1.35
    , cardano-cli              >=1.35
    , cardano-binary    
    , cardano-ledger-alonzo
    , cardano-prelude
    , hedgehog-extras
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma    
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-consensus-cardano    
    , ouroboros-network
    , plutus-ledger-api        >=1.0.0
    , plutus-tx                >=1.0.0
    , plutus-tx-plugin         >=1.0.0
    , cardano-node-emulator    >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0  
    , plutus-core              >=1.0.0   
    , plutus-example
    , plutus-contract-model    >=1.1.0    
    , plutus-contract-certification  >=1.1.0    
    , freer-extras                   >=1.1.0
    , quickcheck-contractmodel     >=0.1.4.0
    , quickcheck-dynamic           >=3.0.2    
    , plutus-script-utils >=1.2.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0
  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , bytestring
    , base16-bytestring    
    , containers
    , serialise
    , strict-containers
    , text
    , transformers
    , transformers-except
    , freer-simple
    , hashable
    , lens
    , openapi3
    , prettyprinter
    , semigroups
    , streaming
    , template-haskell
    , base               >=4.9     && <5
    , data-default
    , foldl
    , mmorph
    , mtl
    , pretty
    , QuickCheck
    , tasty
    , tasty-golden
    , hedgehog
    , tasty-hedgehog     >=0.2.0.0
    , tasty-hunit
    , tasty-quickcheck
    , time
    , directory
    , filepath
    , unordered-containers

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas 

  build-tool-depends:
    , cardano-cli:cardano-cli                >=1.35
    , cardano-node:cardano-node              >=1.35
    , cardano-submit-api:cardano-submit-api  >=1.35




executable plutus-example-simulate-slave
  import:             common-definitions
  hs-source-dirs:     app
  main-is:            SimSlave.hs
  type:               exitcode-stdio-1.0
  default-extensions: ImportQualifiedPost

  --------------------------
  -- IOG dependencies
  --------------------------
  build-depends:
    , cardano-api              >=1.35
    , cardano-cli              >=1.35
    , cardano-binary    
    , cardano-ledger-alonzo
    , cardano-prelude
    , hedgehog-extras
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma    
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-consensus-cardano    
    , ouroboros-network
    , plutus-ledger-api        >=1.0.0
    , plutus-tx                >=1.0.0
    , plutus-tx-plugin         >=1.0.0
    , cardano-node-emulator    >=1.2.0
    , plutus-chain-index-core  >=1.2.0
    , plutus-contract          >=1.2.0
    , plutus-ledger            >=1.2.0
    , plutus-script-utils      >=1.2.0
    , plutus-tx-constraints    >=1.2.0  
    , plutus-core              >=1.0.0   
    , plutus-example
    , plutus-contract-model    >=1.1.0    
    , plutus-contract-certification  >=1.1.0    
    , freer-extras                   >=1.1.0
    , quickcheck-contractmodel     >=0.1.4.0
    , quickcheck-dynamic           >=3.0.2    
    , plutus-script-utils >=1.2.0
    , plutus-pab

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0
  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , bytestring
    , base16-bytestring    
    , containers
    , serialise
    , strict-containers
    , text
    , transformers
    , transformers-except
    , freer-simple
    , hashable
    , lens
    , openapi3
    , prettyprinter
    , semigroups
    , streaming
    , template-haskell
    , base               >=4.9     && <5
    , data-default
    , foldl
    , mmorph
    , mtl
    , pretty
    , QuickCheck
    , tasty
    , tasty-golden
    , hedgehog
    , tasty-hedgehog     >=0.2.0.0
    , tasty-hunit
    , tasty-quickcheck
    , time
    , directory
    , filepath
    , unordered-containers

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas 

  build-tool-depends:
    , cardano-cli:cardano-cli                >=1.35
    , cardano-node:cardano-node              >=1.35
    , cardano-submit-api:cardano-submit-api  >=1.35
